Game guessing commit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Game Guessing</title>
 </head>
 <body>
-    <!-- <div class="container">
+    <div class="container">
         <h3>Guessing games are icebeaker activities that encourages good communication and fast thinking skills</h3>
         <h3>i am thinking of a number between 1-100 </h3>
         <h3>best of luck in guessing</h3>
@@ -19,7 +19,7 @@
         <p id="message1">No. of Guesses: 0</p>
         <p id="message2">Guessed Numbers are: None</p>
         <p id="message3"></p>
-    </div> -->
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
